- Fixed bug #49908 (throwing exception in __autoload crashes when interface is not defined)